@@ -6,7 +6,7 @@
 		<li><span class="menu-label">OpenPGP:</span></li>
 		<li><a href="/">Search</a></li>
 		<li><a href="/add">Add</a></li>
-		<li><a href="/pks/lookup?op=status">Status</a></li>
+		<li><a href="/pks/lookup?op=stats">Stats</a></li>
 		<li><span class="menu-label">Machines:</span></li>
 		<li><span class="todo-link">SSH</span></li>
 		<li><span class="todo-link">SSL/TLS</span></li>
